# pixels-of-life

./: Cargo.toml
desktop/: Cargo.toml
desktop/src/: main.rs
pixels-of-life/: Cargo.toml
pixels-of-life/src/: lib.rs
pixels-of-life/src/shaders/: copy.fs.glsl  fullscreen_quad.vs.glsl  mutate.fs.glsl
web/: Cargo.toml
web/src/: lib.rs
